[package]
name = "zswalc"
version = "0.1.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"
futures = "0.3"
htmlescape = "0.3"
indoc = "0.3"
lazy_static = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = "0.27"
url = "2.2"

[dependencies.clap]
version = "3.1"
features = ["derive"]

[dependencies.hyper]
version = "0.14"
features = ["http1", "http2", "server", "tcp"]

[dependencies.tera]
version = "1.0"
default-features = false

[dependencies.tokio]
version = "1.20"
features = ["rt", "rt-multi-thread", "macros"]

[profile.release]
lto = true
